--- a/package.json
+++ b/package.json
@@ -12,13 +12,16 @@
   "dependencies": {
     "@biomejs/biome": "^2.1.2",
     "@tailwindcss/vite": "^4.1.11",
+    "@types/uuid": "^10.0.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "tailwindcss": "^4.1.11",
+    "uuid": "^11.1.0",
     "vite-plugin-biome": "^1.0.12"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
+    "@julr/vite-plugin-validate-env": "^2.2.0",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "@vitejs/plugin-react": "^4.6.0",
