--- a/api/pyproject.toml
+++ b/api/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "alembic>=1.16.4",
     "fastapi[standard]>=0.116.1",
     "mistralai>=1.9.3",
+    "psycopg2-binary>=2.9.10",
     "pydantic-settings>=2.10.1",
     "sqlmodel>=0.0.24",
 ]
