--- a/api/pyproject.toml
+++ b/api/pyproject.toml
@@ -6,7 +6,9 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "alembic>=1.16.4",
+    "asyncpg>=0.30.0",
     "fastapi[standard]>=0.116.1",
+    "greenlet>=3.2.3",
     "mistralai>=1.9.3",
     "psycopg2-binary>=2.9.10",
     "pydantic-settings>=2.10.1",
