--- a/compose.yaml
+++ b/compose.yaml
@@ -9,6 +9,41 @@ services:
       - 5432:5432
     volumes:
       - db_data:/var/lib/postgresql/data
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+
+  api:
+    build:
+      context: ./api
+      dockerfile: Dockerfile
+    env_file:
+      - .env
+    ports:
+      - "8000:8000"
+    depends_on:
+      db:
+        condition: service_healthy
+    volumes:
+      - ./api:/app
+    command: >
+      sh -c "
+        uv run alembic upgrade head &&
+        uv run fastapi run
+      "
+
+  web:
+    build:
+      context: ./web
+      dockerfile: Dockerfile
+      args:
+        VITE_API_URL: http://127.0.0.1:8000/api/v1
+    ports:
+      - "80:80"
+    depends_on:
+      - api
 
 volumes:
   db_data:
