--- a/api/pyproject.toml
+++ b/api/pyproject.toml
@@ -15,6 +15,13 @@ dependencies = [
     "sqlmodel>=0.0.24",
 ]
 
+[project.optional-dependencies]
+test = [
+    "pytest>=8.0.0",
+    "pytest-asyncio>=0.24.0",
+    "httpx>=0.27.0",
+]
+
 
 [tool.alembic]
 
